fixed overflow text with ellipsis

--- a/HastyBLCAdmin/wwwroot/css/superadmin.css
+++ b/HastyBLCAdmin/wwwroot/css/superadmin.css
@@ -496,6 +496,10 @@ footer {
 
 .list-text {
     color: #eedeaa;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    max-width: 100%;
 }
 
 .list > .row.mb-3 > div {
